--- a/hegedus_final_project_470.768.html
+++ b/hegedus_final_project_470.768.html
@@ -3304,6 +3304,7 @@ vertical-align: -.125em;
 <section id="conclusion" class="level2">
 <h2 class="anchored" data-anchor-id="conclusion">Conclusion</h2>
 <p>In this analysis, we found that the Supreme Court tended to have more agreements overall despite the median affirmative vote staying consistent over each chief justice. We found that three main issues the Court consistently deals with in the modern era are Criminal Procedure, Civil Rights, and Economic Activity, and that these issues tend to have conservative findings (though, with the exception of criminal procedure, only marginally). Finally, we also find that many cases will end up going down on remand, which is essential to prepare a client for.</p>
+<p>Link to GitHub repo: https://github.com/AllanHegedus/jhu_dap_470.768_final.git</p>
 
 </section>
 
